beta 0.1.7.7: Modulo 3 implementado ProductoCentralizado, funciones para visualizar producto.